--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,10 @@ env:
     CLOUDFRONT_DIST_ID: "E30YKKSWJC4ZRP"
 
 phases:
+  pre_build:
+    commands:
+      - echo "Checking if S3 bucket exists and accessible..."
+      - aws s3 ls s3://$S3_BUCKET/ --region ap-south-1 || echo "⚠️ Cannot access bucket"
   install:
     commands:
       - echo "Nothing to install for static site"
@@ -13,9 +17,18 @@ phases:
   build:
     commands:
       - echo "Deploying static website files to S3..."
-      - aws s3 cp . s3://$S3_BUCKET/ --recursive --exclude ".git/*" --exclude "buildspec.yml" --exclude ".gitignore" --no-progress --exact-timestamps
+      - aws s3 cp . s3://$S3_BUCKET/ \
+          --recursive \
+          --exclude ".git/*" \
+          --exclude "buildspec.yml" \
+          --exclude ".gitignore" \
+          --no-progress \
+          --exact-timestamps \
+          --region ap-south-1
       - echo "Invalidating CloudFront cache..."
-      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DIST_ID --paths "/*"
+      - aws cloudfront create-invalidation \
+          --distribution-id $CLOUDFRONT_DIST_ID \
+          --paths "/*"
 
 artifacts:
   files:
