--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ env:
 phases:
   pre_build:
     commands:
-      - echo "Checking if S3 bucket exists and accessible..."
+      - echo "Checking S3 bucket access..."
       - aws s3 ls s3://$S3_BUCKET/ --region ap-south-1 || echo "⚠️ Cannot access bucket"
   install:
     commands:
@@ -17,18 +17,9 @@ phases:
   build:
     commands:
       - echo "Deploying static website files to S3..."
-      - aws s3 cp . s3://$S3_BUCKET/ \
-          --recursive \
-          --exclude ".git/*" \
-          --exclude "buildspec.yml" \
-          --exclude ".gitignore" \
-          --no-progress \
-          --exact-timestamps \
-          --region ap-south-1
+      - aws s3 cp . s3://$S3_BUCKET/ --recursive --exclude ".git/*" --exclude "buildspec.yml" --exclude ".gitignore" --no-progress --exact-timestamps --region ap-south-1
       - echo "Invalidating CloudFront cache..."
-      - aws cloudfront create-invalidation \
-          --distribution-id $CLOUDFRONT_DIST_ID \
-          --paths "/*"
+      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DIST_ID --paths "/*"
 
 artifacts:
   files:
