--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
   build:
     commands:
       - echo "Deploying static website files to S3..."
-      - aws s3 cp . s3://$S3_BUCKET/ --recursive --exclude ".git/*" --exclude "buildspec.yml" --exclude ".gitignore" --no-progress --exact-timestamps --region ap-south-1
+      - aws s3 cp . s3://$S3_BUCKET/ --recursive --exclude ".git/*" --exclude "buildspec.yml" --exclude ".gitignore" --no-progress --region ap-south-1
       - echo "Invalidating CloudFront cache..."
       - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DIST_ID --paths "/*"
 
